<resources>
    <string name="app_name">Yummy</string>
    <string name="enter_username">Usuario</string>
    <string name="enter_password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="new_register">¿Eres nuevo? Registrate</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="register">Registro</string>
    <string name="email">E-mail</string>
    <string name="confir_password">Confirmar contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="recipe_name">Nombre de la receta</string>
    <string name="ingredients_title">Ingredientes</string>
    <string name="ingredients_tips">Ingredientes de la receta</string>
    <string name="preparation_title">Preparación</string>
    <string name="preparation_tips">Cómo se prepara la receta</string>
    <string name="final_photo">Resultado final</string>
    <string name="add_recipe">Añadir receta</string>
    <string name="my_recipes">Mis recetas</string>
    <string name="liked_recipes">Recetas que me gustan</string>
    <string name="profile">Perfil</string>
    <string name="search">Buscar Receta</string>
    <string name="categorias">Categorias</string>
    <string name="platoFuerte">Platos Fuertes</string>
    <string name="acompañamientos">Acompañamientos</string>
    <string name="Ensaladas">Ensaladas</string>
    <string name="Bebidas">Bebidas</string>
    <string name="Salsasyaderezos">Salsas y Aderezos</string>
    <string name="Bocadillos">Bocadillos</string>
    <string name="sopas">Sopas y Guisados</string>
    <string name="Postres">Postres</string>
    <string name="Reposteria">Reposteria</string>
    <string name="Desayuno">DEsayuno</string>
    <string name="ComidaBoliviana">Comida Boliviana</string>
    <string name="Change_password">Restablecer contraseña</string>
    <string name="New_password">Nueva contraseña</string>
    <string name="Confirm_password">Confirmar nueva contraseña</string>
    <string name="Accept">ACEPTAR</string>
    <string name="addImage">Añade una Foto:</string>
    <string name="select_category">Selecciona la categoria</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="logOut">Cerrar Sesión</string>
</resources>
