<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/receta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="top"
            android:hint="@string/recipe_name"
            android:inputType="text"
            android:textAllCaps="true"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ingredients_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/ingredientesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/ingredients_tips"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">>
            <TextView
                android:id="@+id/Textpreparacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/preparation_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/pasosEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/preparation_tips"
                android:inputType="textMultiLine" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/añadirFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/final_photo"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"/>


            <Button
                android:id="@+id/BUTTON"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="15dp"
                android:background="@color/colorButton"
                android:text="@string/add_recipe"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>