<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/profile_avatar"
            android:tint="@color/colorPrimaryLight"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/enter_username"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/MisRecetas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:text="@string/my_recipes"
            android:textSize="30sp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:paddingVertical="20dp" />

        <Button
            android:id="@+id/likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:text="@string/liked_recipes"
            android:textSize="30sp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:paddingVertical="20dp"/>

        <Button
            android:id="@+id/ButtonAñadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:text="@string/add_recipe"
            android:textSize="30sp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:paddingVertical="20dp" />
        <Button
            android:id="@+id/ButtonCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:text="@string/logOut"
            android:textSize="30sp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:paddingVertical="20dp"/>

    </LinearLayout>

</FrameLayout>