<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/comida_rosa"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="140dp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_yummy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/enter_username"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:imeOptions="actionSearch"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@color/colorButton"
                android:text="@string/login"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/circular"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"/>

        </LinearLayout>
        <TextView
            android:id="@+id/newRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/new_register"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</FrameLayout>
