<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/profile_avatar" />

                <Button
                    android:id="@+id/perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="49dp"
                    android:layout_height="93dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="550dp"
                    app:srcCompat="@android:drawable/ic_menu_search" />

                <EditText
                    android:id="@+id/name_recipe"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:hint="@string/search"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryLight" />
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:background="@drawable/categorias">
                <TextView
                    android:id="@+id/textCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/categorias"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:background="#54FFFFFF"
                    android:textStyle="bold"/>
            </LinearLayout>

        <GridView
            android:id="@+id/gridCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numColumns="2"></GridView>
    </LinearLayout>
</FrameLayout>